# calendar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calendar_project.pro
src/: categorybadgedelegate.cpp  categorybadgedelegate.h  categorydialog.cpp  categorydialog.h  categorydialog.ui  colorcelldelegate.cpp  colorcelldelegate.h  database.cpp  database.h  eventdialog.cpp  eventdialog.h  eventdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tagchipdelegate.cpp  tagchipdelegate.h
